These changes are made(Onsearch feature, user able to choose selected colrs, pin/unpin feature

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
 <div>
-  <h1 style="text-align: center; color:white;"><a  [routerLink]="['/home']"> Infinite Notes</a></h1>
+  <h1 style="text-align: center; color:white;"><a  [routerLink]="['/Notes']"> Infinite Notes</a></h1>
 </div>
 <router-outlet></router-outlet>
