--- a/src/app/note-details/note-details.component.html
+++ b/src/app/note-details/note-details.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="modal-body">
         <div class="mb-3">
-            <p>{{note?.content}}</p>
+            <p>{{note?.body}}</p>
         </div> 
     </div>
     
