--- a/src/app/note-popup/note-popup.component.html
+++ b/src/app/note-popup/note-popup.component.html
@@ -1,23 +1,24 @@
 <div>
     <div class="modal-header ">
-        <h4 class="modal-title">New Note</h4>
+        <h4 class="modal-title" *ngIf="note==null" >New Note</h4>
+        <h4 class="modal-title" *ngIf="note" >Update Note</h4>
         <button type="button" class="close " aria-label="Close" (click)="bsModalRef.hide()">
             <span aria-hidden="true" class="visually-hidden">&times;</span>
         </button>
     </div>
+
     <div class="modal-body"  >
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label text-black">Title</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1"placeholder="Title" [(ngModel)]="title" aria-label="Username">
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Title" [(ngModel)]="title" aria-label="Username">
           </div>
           <div class="mb-3">
             <label for="exampleFormControlTextarea1" class="form-label text-black">Content</label>
-            <textarea class="form-control" aria-label="With textarea" [(ngModel)]="content"></textarea>
+            <textarea class="form-control" aria-label="With textarea" [(ngModel)]="body"></textarea>
           </div>
           <div class="mb-3">
             <label for="exampleFormControlTextarea1" class="form-label text-black w-100 ">Choose your color</label>
             <button class="color-box mr-1" [ngClass]="{'active':noteColor==color?true:false}" *ngFor="let color of selectableColors" (click)="selectColor(color)" [style.background]="color"></button>
-            <!-- <input type="color" class="form-control w-75 " id="exampleColorInput" value="#563d7c" [(ngModel)]="noteColor"> -->
           </div>    
     </div>
 
