--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -39,7 +39,8 @@
             <li class="list-group-item mb-1 " [style.background-color]="note.color">
               <div class="row">
                 <div class="col-md-10">
-                  <h3 class=" text-white" style="cursor: pointer;" (click)="showModal(i)">{{note.title }}</h3>
+                  <h3 class=" text-white" style="cursor: pointer;" (click)="showModal(i)">{{note.title}}</h3>
+                  <!-- <h3 class=" text-white" style="cursor: pointer;" (click)="getNoteId(i)">{{note.title }}</h3> --> 
                 </div>
                 <div class="col-md-2">
                   <button class="btn btn-md btn-light mr-2" (click)="editModal(i)"><i
@@ -87,7 +88,7 @@
             <div class="card rounded col-md-4" style="margin-bottom:15px; "
               *ngFor="let note of pinnedNotes;let i=index">
               <div class="card-body " [style.background-color]="note.color">
-                <h3 class="card-title text-white" style="cursor: pointer;" (click)="showModal(i)">{{ note.title }}</h3>
+                 <h3 class=" text-white" style="cursor: pointer;" (click)="showModal(i)">{{note.title}}</h3>
                 <p class="card-text text-white"
                   style="height:50px;white-space: nowrap;overflow-x:hidden;text-overflow:ellipsis;">{{note.body}}</p>
                 <button class="btn btn-md btn-light mr-2" (click)="editModal(i)"><i
@@ -104,13 +105,11 @@
           <div class="card col-lg-4 rounded col-sm-12 " style="margin-bottom:15px; "
             *ngFor="let note of filteredNotes;let i=index">
             <div class="card-body " [style.background-color]="note.color">
-              <h3 class="card-title text-white" style="cursor: pointer;" (click)="showModal(i)">{{ note.title }}</h3>
-              <p class="card-text text-white"
-                style="height:50px;white-space: nowrap;overflow-x:hidden;text-overflow:ellipsis;">{{note.body}}</p>
-              <button class="btn btn-md btn-light mr-2" (click)="editModal(i)"><i
-                  class="bi bi-pencil-fill"></i></button>
-              <button class="btn btn-md btn-light mr-2" (click)="deleteListContent(i)"><i
-                  class="bi bi-trash-fill"></i></button>
+              <h3 class=" text-white" style="cursor: pointer;" (click)="showModal(i)">{{note.title}}</h3>
+              <p class="card-text text-white" style="height:50px;white-space: nowrap;overflow-x:hidden;text-overflow:ellipsis;">
+                {{note.body}}</p>
+              <button class="btn btn-md btn-light mr-2" (click)="editModal(i)"><i class="bi bi-pencil-fill"></i></button>
+              <button class="btn btn-md btn-light mr-2" (click)="deleteListContent(i)"><i class="bi bi-trash-fill"></i></button>
               <button class="btn btn-md btn-light" (click)="markAsPinned(i)">
                 <i class="bi bi-pin-angle"></i></button>
             </div>
