(show modal, pin notes updated)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,5 @@
   <h1 style="text-align: center; color:white;"><a [routerLink]="['/notes']"> Infinite Notes</a></h1>
 </div>
 <router-outlet></router-outlet>
+
+<!-- <app-home></app-home> -->
